--- a/configuration-svc/src/main/resources/application.yml
+++ b/configuration-svc/src/main/resources/application.yml
@@ -2,10 +2,13 @@ server:
   port: 7575
   ssl:
     enabled: true
-    certificate: classpath:cert/localhost.com.crt
-    certificate-private-key: classpath:cert/localhost.com.key
+    key-store: classpath:cert/keystore.p12
+    key-alias: ${KEYSTORE_ALIAS:localhost}
+    key-store-password: ${KEYSTORE_PHRASE:localhost}
+    key-store-type: ${KEYSTORE_TYPE:PKCS12}
+    key-password: ${KEYSTORE_KEY_PHRASE:localhost}
     trust-store: classpath:cert/truststore.jks
-    trust-store-password: changeit
+    trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
 spring:
   application:
     name: configserver-svc
@@ -20,3 +23,7 @@ spring:
             - file://${HOME}/application/config
             - classpath:config-{profile}
             - classpath:config-{label}
+logging:
+  level:
+    root: WARN
+    com.gm: DEBUG
