--- a/configuration-svc/src/main/resources/config-local/application.yml
+++ b/configuration-svc/src/main/resources/config-local/application.yml
@@ -1,16 +1,19 @@
 server:
   ssl:
     enabled: true
-    certificate: classpath:cert/localhost.com.crt
-    certificate-private-key: classpath:cert/localhost.com.key
+    key-store: classpath:cert/keystore.p12
+    key-alias: ${KEYSTORE_ALIAS:localhost}
+    key-store-password: ${KEYSTORE_PHRASE:localhost}
+    key-store-type: ${KEYSTORE_TYPE:PKCS12}
+    key-password: ${KEYSTORE_KEY_PHRASE:localhost}
     trust-store: classpath:cert/truststore.jks
-    trust-store-password: changeit
+    trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
 eureka:
   instance:
     hostname: ${EUREKA_HOSTNAME:localhost}
     preferIpAddress: ${EUREKA_USE_IP:false}
     secure-port-enabled: true
-    secure-port: ${server.port:8080}
+    secure-port: ${server.port:8761}
     non-secure-port-enabled: false
   client:
     healthcheck: 
