--- a/service-registry-svc/src/main/resources/application.yml
+++ b/service-registry-svc/src/main/resources/application.yml
@@ -15,7 +15,9 @@ spring:
   profiles:
     active: local
   config:
-    import: 'configserver:' 
+    import: 'optional:configserver:' 
   cloud:
     config:
       uri: ${CONFIG_URI:https://localhost:7575}
+      username: ${CONFIG_USER:user}
+      password: ${CONFIG_USER_PHRASE:Config!12}
