--- a/configuration-svc/src/main/resources/config-local/application.yml
+++ b/configuration-svc/src/main/resources/config-local/application.yml
@@ -1,19 +1,19 @@
 server:
   ssl:
     enabled: true
-    key-store: classpath:cert/keystore.p12
+    key-store: ${KEYSTORE_PATH:classpath:cert/keystore.p12}
     key-alias: ${KEYSTORE_ALIAS:localhost}
     key-store-password: ${KEYSTORE_PHRASE:localhost}
     key-store-type: ${KEYSTORE_TYPE:PKCS12}
     key-password: ${KEYSTORE_KEY_PHRASE:localhost}
-    trust-store: classpath:cert/truststore.jks
+    trust-store: ${TRUST_STORE_PATH:classpath:cert/truststore.jks}
     trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
 eureka:
   instance:
     hostname: ${EUREKA_HOSTNAME:localhost}
     preferIpAddress: ${EUREKA_USE_IP:false}
     secure-port-enabled: true
-    secure-port: ${server.port:8761}
+    secure-port: ${server.port:8080}
     non-secure-port-enabled: false
   client:
     healthcheck: 
@@ -37,4 +37,10 @@ management:
 logging:
   level:
     root: WARN
-    com.gm: DEBUG        
+    com.gm: DEBUG
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${KEYCLOAK_URI:https://localhost:8443}/realms/${KEYCLOAK_REALM}              
