--- a/configuration-svc/src/main/resources/application.yml
+++ b/configuration-svc/src/main/resources/application.yml
@@ -2,12 +2,12 @@ server:
   port: 7575
   ssl:
     enabled: true
-    key-store: classpath:cert/keystore.p12
+    key-store: ${KEYSTORE_PATH:classpath:cert/keystore.p12}
     key-alias: ${KEYSTORE_ALIAS:localhost}
     key-store-password: ${KEYSTORE_PHRASE:localhost}
     key-store-type: ${KEYSTORE_TYPE:PKCS12}
     key-password: ${KEYSTORE_KEY_PHRASE:localhost}
-    trust-store: classpath:cert/truststore.jks
+    trust-store: ${TRUST_STORE_PATH:classpath:cert/truststore.jks}
     trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
 spring:
   application:
@@ -16,7 +16,8 @@ spring:
     active: composite
   security:
     user:
-      password: Config!12
+      name: ${CONFIG_USER:user}
+      password: ${CONFIG_USER_PHRASE:Config!12}
   cloud:
     config:
       server:
@@ -25,7 +26,19 @@ spring:
             search-locations: 
             - file://${HOME}/application/config
             - classpath:config-{profile}
-            - classpath:config-{label}         
+            - classpath:config-{label}
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include:
+        - health
+        - info
+        - prometheus                     
 logging:
   level:
     root: WARN
