--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 		<spring-cloud-config.version>3.1.3</spring-cloud-config.version>
 		<keycloak.version>19.0.1</keycloak.version>
+		<gm-spring-common.version>0.0.1-SNAPSHOT</gm-spring-common.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -84,6 +85,7 @@
 					<artifactId>spring-boot-maven-plugin</artifactId>
 					<version>${spring-boot.version}</version>
 					<configuration>
+					  <mainClass>${mainClass}</mainClass>
 						<excludes>
 							<exclude>
 								<groupId>org.projectlombok</groupId>
@@ -94,6 +96,7 @@
 					<executions>
 						<execution>
 							<goals>
+							  <goal>repackage</goal>
 								<goal>build-info</goal>
 							</goals>
 							<configuration>
@@ -108,7 +111,7 @@
 		</pluginManagement>
 	</build>
 	<modules>
-		<module>configuration-svc</module>
+	  <module>configuration-svc</module>
 		<module>service-registry-svc</module>
 		<module>gateway-svc</module>
 		<module>greet-svc</module>
