--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.gm</groupId>
@@ -14,11 +13,13 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<spring-boot.version>2.7.2</spring-boot.version>
-		<spring-cloud.version>2021.0.3</spring-cloud.version>
+		<spring-boot.version>2.7.3</spring-boot.version>
+		<spring-cloud.version>2021.0.4</spring-cloud.version>
 		<spring-cloud-config.version>3.1.3</spring-cloud-config.version>
 		<keycloak.version>19.0.1</keycloak.version>
 		<gm-spring-common.version>0.0.1-SNAPSHOT</gm-spring-common.version>
+		<logback.version>1.4.1</logback.version>
+		<slf4j-api.version>2.0.1</slf4j-api.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -52,8 +53,6 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
-
-
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
@@ -85,7 +84,7 @@
 					<artifactId>spring-boot-maven-plugin</artifactId>
 					<version>${spring-boot.version}</version>
 					<configuration>
-					  <mainClass>${mainClass}</mainClass>
+						<mainClass>${mainClass}</mainClass>
 						<excludes>
 							<exclude>
 								<groupId>org.projectlombok</groupId>
@@ -96,7 +95,7 @@
 					<executions>
 						<execution>
 							<goals>
-							  <goal>repackage</goal>
+								<goal>repackage</goal>
 								<goal>build-info</goal>
 							</goals>
 							<configuration>
@@ -111,7 +110,7 @@
 		</pluginManagement>
 	</build>
 	<modules>
-	  <module>configuration-svc</module>
+		<module>configuration-svc</module>
 		<module>service-registry-svc</module>
 		<module>gateway-svc</module>
 		<module>greet-svc</module>
