--- a/configuration-svc/src/main/resources/config-local/service-registry-svc.yml
+++ b/configuration-svc/src/main/resources/config-local/service-registry-svc.yml
@@ -3,4 +3,8 @@ server:
 eureka:
   client:
     registerWithEureka: false
-    fetchRegistry: false
+logging:
+  level:
+    'com.netflix.eureka': OFF
+    'com.netflix.discovery': OFF
+    'org.springframework.cloud.config.client': WARN
