--- a/configuration-svc/src/main/resources/config-local/application.yml
+++ b/configuration-svc/src/main/resources/config-local/application.yml
@@ -1,27 +1,32 @@
 server:
   ssl:
     enabled: true
-    key-store: classpath:cert/keystore.p12
+    key-store: ${KEYSTORE_PATH:classpath:cert/keystore.p12}
     key-alias: ${KEYSTORE_ALIAS:localhost}
     key-store-password: ${KEYSTORE_PHRASE:localhost}
     key-store-type: ${KEYSTORE_TYPE:PKCS12}
     key-password: ${KEYSTORE_KEY_PHRASE:localhost}
-    trust-store: classpath:cert/truststore.jks
+    trust-store: ${TRUSTSTORE_PATH:classpath:cert/truststore.jks}
     trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
 eureka:
   instance:
-    hostname: ${EUREKA_HOSTNAME:localhost}
-    preferIpAddress: ${EUREKA_USE_IP:false}
-    secure-port-enabled: true
-    secure-port: ${server.port:8761}
-    non-secure-port-enabled: false
+    hostname: ${SERVICE_INSTANCE_HOST:localhost}
+    preferIpAddress: ${SERVICE_INSTANCE_PREFER_IP:false}
+    secure-port-enabled: ${server.ssl.enabled:false}
+    secure-port: ${server.port:8080}
+    non-secure-port-enabled: ${NON_SECURE_PORT_ENABLED:false}
   client:
-    healthcheck: 
+    webclient:
       enabled: true
-    registerWithEureka: true
-    fetchRegistry: true
+    region: default
+    registryFetchIntervalSeconds: 5
+    enabled: ${EUREKA_CLIENT_ENABLED:true}
+    healthcheck: 
+      enabled: ${EUREKA_HEALTH_CHECK_ENABLED:true}
+    registerWithEureka: ${REGISTER_WITH_EUREKA:true}
+    fetchRegistry: false
     serviceUrl:
-      defaultZone: ${SERVICE_REGISTRY_URI:https://localhost:8761}/eureka/
+      defaultZone: ${SERVICE_REGISTRY_URI:https://localhost:8761}/eureka
 management:
   endpoint:
     health:
@@ -37,4 +42,4 @@ management:
 logging:
   level:
     root: WARN
-    com.gm: DEBUG        
+    com.gm: DEBUG
