--- a/configuration-svc/src/main/resources/config-local/gateway-svc.yml
+++ b/configuration-svc/src/main/resources/config-local/gateway-svc.yml
@@ -14,12 +14,16 @@ eureka:
     registerWithEureka: false
     fetchRegistry: true
 management:
+  endpoint:
+    gateway:
+      enabled: true
   endpoints:
     web:
+      base-path: /actuator
       exposure:
-        include: gateway, health, info, prometheus
+        include: '*'
 logging:
   level:
-    org.springframework.security: DEBUG
+    org.springframework.security: WARN
     reactor.netty: WARN
-    org.springframework.cloud.gateway: TRACE
+    org.springframework.cloud.gateway: WARN
