--- a/service-registry-svc/src/main/resources/application.yml
+++ b/service-registry-svc/src/main/resources/application.yml
@@ -1,23 +1,20 @@
-server:
-  port: 8761
-  ssl:
-    enabled: true
-    key-store: classpath:cert/keystore.p12
-    key-alias: ${KEYSTORE_ALIAS:localhost}
-    key-store-password: ${KEYSTORE_PHRASE:localhost}
-    key-store-type: ${KEYSTORE_TYPE:PKCS12}
-    key-password: ${KEYSTORE_KEY_PHRASE:localhost}
-    trust-store: classpath:cert/truststore.jks
-    trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
 spring:
   application:
     name: service-registry-svc
-  profiles:
-    active: local
   config:
-    import: 'optional:configserver:' 
+    import: 'configserver:' 
   cloud:
     config:
+      profile: local 
       uri: ${CONFIG_URI:https://localhost:7575}
-      username: ${CONFIG_USER:user}
+      username: ${CONFIG_USER:config-svc}
       password: ${CONFIG_USER_PHRASE:Config!12}
+      tls:
+        trust-store-type: PKCS12
+        enabled: true
+        key-store: classpath:cert/keystore.p12
+        key-store-password: ${KEYSTORE_PHRASE:localhost}
+        key-store-type: ${KEYSTORE_TYPE:PKCS12}
+        key-password: ${KEYSTORE_KEY_PHRASE:localhost}
+        trust-store: classpath:cert/truststore.jks
+        trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
