--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <spring-cloud-eureka-client.version>4.0.2</spring-cloud-eureka-client.version>
     <spring-undertow.version>3.1.1</spring-undertow.version>
     <keycloak.version>19.0.1</keycloak.version>
+    <micrometer-tracing.version>1.1.2</micrometer-tracing.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -71,6 +72,13 @@
         <groupId>org.keycloak.bom</groupId>
         <artifactId>keycloak-adapter-bom</artifactId>
         <version>${keycloak.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.micrometer</groupId>
+        <artifactId>micrometer-tracing-bom</artifactId>
+        <version>${micrometer-tracing.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
