--- a/configuration-svc/src/main/resources/application.yml
+++ b/configuration-svc/src/main/resources/application.yml
@@ -1,17 +1,16 @@
 server:
-  port: 7575
   ssl:
-    enabled: true
-    key-store: classpath:cert/keystore.p12
+    enabled: ${SSL_ENABLED:false}
+    key-store: ${KEYSTORE_PATH:classpath:cert/keystore.p12}
     key-alias: ${KEYSTORE_ALIAS:localhost}
     key-store-password: ${KEYSTORE_PHRASE:localhost}
     key-store-type: ${KEYSTORE_TYPE:PKCS12}
     key-password: ${KEYSTORE_KEY_PHRASE:localhost}
-    trust-store: classpath:cert/truststore.jks
+    trust-store: ${TRUSTSTORE_PATH:classpath:cert/truststore.jks}
     trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
 encrypt:
   keyStore:
-    location: classpath:cert/keystore.p12
+    location: ${KEYSTORE_PATH:classpath:cert/keystore.p12}
     password: ${KEYSTORE_PHRASE:localhost}
     alias: configserverkey
     secret: ${CONFIG_ENCRYPTION_PHRASE:localhost}    
@@ -22,8 +21,11 @@ spring:
     active: composite
   security:
     user:
-      name: config-svc
-      password: Config!12
+      name: ${CONFIG_USR_NAME:config-svc}
+      password: ${CONFIG_USR_PHRASE:Config!12}
+    actuator-user:
+      name: ${ACTUATOR_USR_NAME:actuator}
+      password: ${ACTUATOR_USR_PHRASE:Actuator!12}
   cloud:
     config:
       server:
@@ -32,7 +34,26 @@ spring:
             search-locations: 
             - file://${HOME}/application/config
             - classpath:config-{profile}
-            - classpath:config-{label}         
+            - classpath:config-{label}
+management:
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
+  endpoint:
+    health:
+      probes:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include:
+          - health
+          - info
+          - prometheus
+          - metrics
 logging:
   level:
     root: WARN
