--- a/configuration-svc/src/main/resources/config-local/application.yml
+++ b/configuration-svc/src/main/resources/config-local/application.yml
@@ -1,6 +1,6 @@
 server:
   ssl:
-    enabled: true
+    enabled: ${SSL_ENABLED:false}
     key-store: ${KEYSTORE_PATH:classpath:cert/keystore.p12}
     key-alias: ${KEYSTORE_ALIAS:localhost}
     key-store-password: ${KEYSTORE_PHRASE:localhost}
@@ -28,6 +28,12 @@ eureka:
     serviceUrl:
       defaultZone: ${SERVICE_REGISTRY_URI:https://localhost:8761}/eureka
 management:
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
   endpoint:
     health:
       probes:
@@ -39,6 +45,7 @@ management:
         - health
         - info
         - prometheus
+        - metrics
 spring:
   main:
     banner-mode: off
