--- a/greet-svc/src/main/resources/application.yml
+++ b/greet-svc/src/main/resources/application.yml
@@ -5,9 +5,18 @@ spring:
     import: 'configserver:' 
   cloud:
     config:
+      fail-fast: true
       profile: local
       uri: ${CONFIG_URI:https://localhost:7575}
       username: ${CONFIG_USER:config-svc}
       password: ${CONFIG_USER_PHRASE:Config!12}
-server:
-  port: 8081
+      tls:
+        enabled: true
+        key-store: classpath:cert/keystore.p12
+        key-store-password: ${KEYSTORE_PHRASE:localhost}
+        key-password: ${KEYSTORE_KEY_PHRASE:localhost}
+        trust-store: classpath:cert/truststore.jks
+        trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
+logging:
+  level:
+    org.springframework.cloud.config: DEBUG
