--- a/service-registry-svc/pom.xml
+++ b/service-registry-svc/pom.xml
@@ -10,6 +10,9 @@
   <groupId>com.gm.services</groupId>
   <artifactId>service-registry-svc</artifactId>
   <description>Service Registry Service</description>
+  <properties>
+    <app-main-class>com.gm.services.serviceregistry.ServiceRegistryApplication</app-main-class>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
@@ -39,6 +42,18 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>com.googlecode.maven-download-plugin</groupId>
+        <artifactId>download-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
