--- a/gateway-svc/src/main/resources/application.yml
+++ b/gateway-svc/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
   cloud:
     config:
       profile: local
-      uri: ${CONFIG_URI:https://localhost:7575}
+      uri: ${CONFIG_URI:http://localhost:7575}
       username: ${CONFIG_USER:config-svc}
       password: ${CONFIG_USER_PHRASE:Config!12}
