--- a/greet-svc/src/main/resources/application.yml
+++ b/greet-svc/src/main/resources/application.yml
@@ -7,16 +7,9 @@ spring:
     config:
       fail-fast: true
       profile: local
-      uri: ${CONFIG_URI:https://localhost:7575}
+      uri: ${CONFIG_URI:http://localhost:7575}
       username: ${CONFIG_USER:config-svc}
       password: ${CONFIG_USER_PHRASE:Config!12}
-      tls:
-        enabled: true
-        key-store: classpath:cert/keystore.p12
-        key-store-password: ${KEYSTORE_PHRASE:localhost}
-        key-password: ${KEYSTORE_KEY_PHRASE:localhost}
-        trust-store: classpath:cert/truststore.jks
-        trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
 logging:
   level:
     org.springframework.cloud.config: DEBUG
