--- a/configuration-svc/src/main/resources/config-local/application.yml
+++ b/configuration-svc/src/main/resources/config-local/application.yml
@@ -28,6 +28,10 @@ eureka:
     serviceUrl:
       defaultZone: ${SERVICE_REGISTRY_URI:https://localhost:8761}/eureka
 management:
+  otlp:
+    metrics:
+      export:
+        url: ${OTLP_URI:http://localhost:4317}
   metrics:
     distribution:
       percentiles-histogram:
