--- a/gateway-svc/deployment.yaml
+++ b/gateway-svc/deployment.yaml
@@ -8,7 +8,7 @@ spec:
   ports:
   - port: 8080
     protocol: TCP
-  clusterIP: None
+  type: LoadBalancer
   selector:
     app: gateway-svc
 ---
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: gateway-svc
-        image: registry.localhost:5000/gateway-svc:latest
+        image: registry.localhost:5001/gateway-svc:latest
         imagePullPolicy: Always
         ports:
           - containerPort: 8080
@@ -53,3 +53,14 @@ spec:
           initialDelaySeconds: 5
           failureThreshold: 30
           periodSeconds: 10
+        env:
+        - name: CONFIG_URI
+          value: http://configuration-svc:8080
+        - name: SERVICE_REGISTRY_URI
+          value: http://service-registry-svc:8761
+        - name: NON_SECURE_PORT_ENABLED
+          value: "true"    
+        - name: OTEL_METRICS_EXPORTER
+          value: otlp
+        - name: OTLP_URI
+          value: http://otel-collector:4317
