--- a/greet-svc/deployment.yaml
+++ b/greet-svc/deployment.yaml
@@ -58,7 +58,5 @@ spec:
           value: http://service-registry-svc:8761
         - name: NON_SECURE_PORT_ENABLED
           value: "true"
-        - name: OTEL_METRICS_EXPORTER
-          value: otlp
-        - name: OTLP_URI
-          value: http://otel-collector:4317          
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: http://otel-collector:4317
