--- a/greet-svc/deployment.yaml
+++ b/greet-svc/deployment.yaml
@@ -59,4 +59,6 @@ spec:
         - name: NON_SECURE_PORT_ENABLED
           value: "true"
         - name: OTEL_EXPORTER_OTLP_ENDPOINT
-          value: http://otel-collector:4317
+          value: http://host.k3d.internal:4317
+        - name: SERVICE_INSTANCE_PREFER_IP
+          value: "true"
