--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,7 @@
           <artifactId>jib-maven-plugin</artifactId>
           <version>${jib.version}</version>
           <configuration>
+            <skip>true</skip>
             <allowInsecureRegistries>true</allowInsecureRegistries>
             <from>
               <image>${container-java-image}</image>
