--- a/configuration-svc/src/main/resources/application.yml
+++ b/configuration-svc/src/main/resources/application.yml
@@ -1,19 +1,5 @@
 server:
-  ssl:
-    enabled: ${SSL_ENABLED:false}
-    key-store: ${KEYSTORE_PATH:classpath:cert/keystore.p12}
-    key-alias: ${KEYSTORE_ALIAS:localhost}
-    key-store-password: ${KEYSTORE_PHRASE:localhost}
-    key-store-type: ${KEYSTORE_TYPE:PKCS12}
-    key-password: ${KEYSTORE_KEY_PHRASE:localhost}
-    trust-store: ${TRUSTSTORE_PATH:classpath:cert/truststore.jks}
-    trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
-encrypt:
-  keyStore:
-    location: ${KEYSTORE_PATH:classpath:cert/keystore.p12}
-    password: ${KEYSTORE_PHRASE:localhost}
-    alias: configserverkey
-    secret: ${CONFIG_ENCRYPTION_PHRASE:localhost}    
+  port: 7575
 spring:
   application:
     name: configserver-svc
