--- a/configuration-svc/src/main/resources/config-local/application.yml
+++ b/configuration-svc/src/main/resources/config-local/application.yml
@@ -1,32 +1,23 @@
 server:
-  ssl:
-    enabled: ${SSL_ENABLED:false}
-    key-store: ${KEYSTORE_PATH:classpath:cert/keystore.p12}
-    key-alias: ${KEYSTORE_ALIAS:localhost}
-    key-store-password: ${KEYSTORE_PHRASE:localhost}
-    key-store-type: ${KEYSTORE_TYPE:PKCS12}
-    key-password: ${KEYSTORE_KEY_PHRASE:localhost}
-    trust-store: ${TRUSTSTORE_PATH:classpath:cert/truststore.jks}
-    trust-store-password: ${TRUSTSTORE_PHRASE:localhost}
 eureka:
   instance:
     hostname: ${SERVICE_INSTANCE_HOST:localhost}
     preferIpAddress: ${SERVICE_INSTANCE_PREFER_IP:false}
     secure-port-enabled: ${server.ssl.enabled:false}
     secure-port: ${server.port:8080}
-    non-secure-port-enabled: ${NON_SECURE_PORT_ENABLED:false}
+    non-secure-port-enabled: ${NON_SECURE_PORT_ENABLED:true}
   client:
     webclient:
       enabled: true
     region: default
     registryFetchIntervalSeconds: 5
     enabled: ${EUREKA_CLIENT_ENABLED:true}
-    healthcheck: 
+    health-check:
       enabled: ${EUREKA_HEALTH_CHECK_ENABLED:true}
     registerWithEureka: ${REGISTER_WITH_EUREKA:true}
     fetchRegistry: false
     serviceUrl:
-      defaultZone: ${SERVICE_REGISTRY_URI:https://localhost:8761}/eureka
+      defaultZone: ${SERVICE_REGISTRY_URI:http://localhost:8761}/eureka
 management:
   metrics:
     distribution:
